--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -45,20 +45,33 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="#FFFDE7"
-
             android:orientation="vertical"
             android:paddingTop="10dp">
 
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
+                android:layout_marginTop="8dp"
                 android:text="Details"
                 android:textAllCaps="true"
                 android:textColor="#daa520"
                 android:textSize="20dp"
                 android:textStyle="bold" />
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="8dp"
+                android:layout_marginBottom="5dp">
+
+            <include layout="@layout/activity_like"/>
+            </LinearLayout>
+        </RelativeLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -76,12 +89,7 @@
             </LinearLayout>
 
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-                <include layout="@layout/activity_like"/>
 
-            </LinearLayout>
 
 
             <LinearLayout
