--- a/app/src/main/res/layout/card_layout_comments.xml
+++ b/app/src/main/res/layout/card_layout_comments.xml
@@ -2,14 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:layout_marginLeft="8dp"
     android:orientation="vertical">
 
     <ListView
         android:id="@+id/messageListView"
         android:layout_width="match_parent"
-        android:layout_height="250dp"
+        android:layout_height="wrap_content"
         android:divider="@android:color/transparent"
         android:stackFromBottom="true"
         />
