--- a/app/src/main/res/layout/custom_dialog.xml
+++ b/app/src/main/res/layout/custom_dialog.xml
@@ -8,6 +8,9 @@
     <TextView
         android:id="@+id/dia_name"
         android:layout_width="match_parent"
+        android:textSize="20dp"
+        android:textStyle="bold"
+        android:textAllCaps="true"
         android:layout_height="wrap_content"
         android:text="place name" />
 
