--- a/app/src/main/res/layout/image_item.xml
+++ b/app/src/main/res/layout/image_item.xml
@@ -20,28 +20,46 @@
             app:civ_border_width="1dp" />
 
         <LinearLayout
-            android:layout_marginLeft="100dp"
             android:id="@+id/ViewName"
             android:layout_width="296dp"
             android:layout_height="match_parent"
+            android:layout_marginLeft="90dp"
             android:orientation="vertical">
 
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/tvPlaceName"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:text="place name"
+                    android:textSize="18dp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/tvPrice"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="30dp"
+                    android:layout_alignParentRight="true"
+                    android:text="R100"
+                    android:textSize="16dp"
+                    android:layout_marginRight="40dp"
+                    android:textColor="#daa520"
+                    android:textStyle="bold" />
+            </RelativeLayout>
+
             <TextView
-                android:id="@+id/tvPlaceName"
+                android:id="@+id/tvLike"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-
-                android:layout_marginTop="10dp"
-                android:text="place name"
+                android:text="Location"
                 android:textSize="16dp"
                 android:textStyle="bold" />
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-
-                android:layout_marginTop="6dp"
-                android:src="@drawable/rating" />
 
         </LinearLayout>
     </android.support.v7.widget.CardView>
