--- a/app/src/main/res/layout/card_layout_comments.xml
+++ b/app/src/main/res/layout/card_layout_comments.xml
@@ -1,23 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:layout_marginLeft="8dp"
     android:orientation="vertical">
+
+
 
     <ListView
         android:id="@+id/messageListView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="300dp"
         android:divider="@android:color/transparent"
-        android:stackFromBottom="true"
-        />
+        android:stackFromBottom="true" />
 
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="horizontal">
 
 
@@ -27,17 +32,23 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_weight="1"
+            android:layout_marginRight="4dp"
             android:hint="type a comment..." />
 
         <Button
             android:id="@+id/sendButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
             android:layout_gravity="bottom"
+            android:layout_marginRight="12dp"
+            android:background="@drawable/send"
             android:enabled="false"
-            android:text="send" />
+            />
 
     </LinearLayout>
 
 
+
+
 </LinearLayout>
+    </ScrollView>
